--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "371project",
+  "name": "firebase-login",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@js-joda/core": "^5.2.0",
+    "@js-joda/locale_en-us": "^4.7.0",
+    "@js-joda/timezone": "^2.12.0",
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "leaflet": "^1.7.1",
+    "firebase": "^9.6.10",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^9.1.2"
+    "vue-property-decorator": "^9.1.2",
+    "vue2-leaflet": "^2.7.1",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
@@ -25,25 +34,5 @@
     "eslint-plugin-vue": "^8.0.3",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended",
-      "@vue/typescript/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2020
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  }
 }
